--- a/index.html
+++ b/index.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-   <link rel="stylesheet" href="country-info-app.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    />
+    <link rel="stylesheet" href="country-info-app.css" />
     <title>country information</title>
-    
-</head>
-<body>
+  </head>
+  <body>
     <div class="search-box">
-    <i class="fa-solid fa-magnifying-glass" style="color: #2a2a2a;"></i>
-    <input id="input" type="text" placeholder="search Country Name">
-    <button id="search">search</button>
-    <span id="alert"></span>
+      <i class="fa-solid fa-magnifying-glass" style="color: #2a2a2a"></i>
+      <input id="input" type="text" placeholder="search Country Name" />
+      <button id="search">search</button>
+      <span id="alert"></span>
+    </div>
 
-</div>
-  
-   <div id="country-box">
-    <!-- <div class="image">
+    <div id="country-box">
+      <!-- <div class="image">
         <img src="#" alt="#">
     </div>
     <h1>Pakistan</h1>
@@ -29,9 +30,8 @@
         <p>Currency:</p>
         <p>Language:</p>
     </div> -->
-
-   </div>
+    </div>
 
     <script src="app.js"></script>
-</body>
+  </body>
 </html>
